# gzmo-core-clean

./: Cargo.toml  README.md
data/: vault.db
examples/: basic_modulation.rs  feedback_loop.rs  live_learning_demo.rs  long_term_learning.rs  pedagogy_session.rs  real_llm_demo.rs  telemetry_dashboard.rs
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs  repl.rs
src/config/: defaults.rs  mod.rs  validation.rs
src/etl/: extract.rs  mod.rs  promote.rs  verify.rs
src/feedback/: detector.rs  evaluator.rs  learner.rs  mod.rs  queue.rs  self_improving_loop.rs
src/gateway/: cache.rs  client.rs  mod.rs  routing.rs
src/modulation/: mod.rs  parameter_mapper.rs  state_generator.rs  tempo.rs
src/pedagogy/: evaluator.rs  mod.rs  session.rs  tutor.rs
src/skills/: builtin.rs  dispatch.rs  mod.rs  registry.rs
src/storage/: dedup.rs  mod.rs  vault.rs  vectors.rs
src/telemetry/: dashboard.rs  exporter.rs  metrics.rs  mod.rs
