[package]
name = "gzmo-core-clean"
version = "0.1.0"
edition = "2021"
description = "Clean GZMO Core - From-scratch architecture without theatrical language"
authors = ["GZMO Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gzmo/gzmo-core-clean"
keywords = ["llm", "modulation", "socratic", "telemetry"]
categories = ["science", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "gzmo-clean"
path = "src/main.rs"

[workspace]
